[package]
name = "iris-broker"
version = "0.5.0"
authors = ["Matthieu Buffet <matthieu@buffet.re>"]
edition = "2021"
publish = false

[dependencies]
serde = { version = "1.0.125", default-features = false, features = ["derive"] }
iris-policy = { path = "../policy" }
iris-ipc = { path = "../ipc" }
iris-ipc-messages = { path = "../ipc-messages" }
log = "0.4.17"
lazy_static = "1.4.0"

[target.'cfg(target_os="linux")'.dependencies]
libc = "0.2.94"
libseccomp = { version = "0.3.0", features = [] }
tempfile = { version = "3.3.0", features = [] }
linux-entrypoint = { path = "../linux-entrypoint" }

[target.'cfg(target_os="windows")'.dependencies]
winapi = { version = "0.3.9", features = ["processthreadsapi", "errhandlingapi", "sysinfoapi", "winbase", "winerror", "userenv", "sddl", "synchapi", "memoryapi", "accctrl", "aclapi"] }
