[package]
name = "iris-ipc-messages"
version = "0.1.0"
authors = ["Matthieu Buffet <matthieu@buffet.re>"]
edition = "2021"

[dependencies]
serde = { version = "1.0.125", default-features = false, features = ["derive"] }
iris-policy = { path = "../policy" }

[target.'cfg(target_os="linux")'.dependencies]
libc = "0.2.94"

[target.'cfg(target_os="windows")'.dependencies]
winapi = { version = "0.3.9", features = [] }
