[package]
name = "iris-ipc"
version = "0.5.0"
authors = ["Matthieu Buffet <matthieu@buffet.re>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
bincode = "1.3.3"
iris-policy = { path = "../policy" }

[target.'cfg(target_os="linux")'.dependencies]
libc = "0.2.94"

[target.'cfg(target_os="windows")'.dependencies]
winapi = { version = "0.3.9", features = ["errhandlingapi", "namedpipeapi", "fileapi", "handleapi"] }

