[package]
name = "iris-ipc"
version = "0.5.0"
authors = ["Matthieu Buffet <matthieu@buffet.re>"]
edition = "2021"

[dependencies]
serde = { version = "1.0.125", default-features = false, features = ["derive"] }
postcard = "1.0.6"
log = "0.4.17"

[target.'cfg(target_os="linux")'.dependencies]
libc = "0.2.94"

[target.'cfg(target_os="windows")'.dependencies]
winapi = { version = "0.3.9", features = ["errhandlingapi", "namedpipeapi", "fileapi", "handleapi"] }
