[package]
name = "iris-policy"
version = "0.1.0"
authors = ["Matthieu Buffet <matthieu@buffet.re>"]
edition = "2021"

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
glob = "0.3.0"
libc = "0.2.98"

[target.'cfg(target_os="windows")'.dependencies]
winapi = { version = "0.3.9", features = ["errhandlingapi", "handleapi"] }
