[package]
name = "iris-integration-tests"
version = "0.1.0"
authors = ["Matthieu Buffet <matthieu@buffet.re>"]
edition = "2021"

[dependencies]
iris-broker = { path = "../broker" }
iris-worker = { path = "../worker" }
iris-policy = { path = "../policy" }
iris-ipc = { path = "../ipc" }
log = "0.4.17"
simple_logger = "2.3.0"
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["fileapi", "handleapi", "debugapi", "securitybaseapi", "aclapi", "winsock2"] }

[lib]
name = "common"
path = "src/common.rs"
