[package]
name = "iris-worker"
version = "0.1.0"
authors = ["Matthieu Buffet <matthieu@buffet.re>"]
edition = "2018"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
iris-ipc = { path = "../ipc" }
iris-policy = { path = "../policy" }

[target.'cfg(target_os="linux")'.dependencies]
libc = "0.2.94"

[target.'cfg(target_os="windows")'.dependencies]
winapi = { version = "0.3.9", features = ["processthreadsapi", "errhandlingapi", "sysinfoapi", "winbase", "winerror", "userenv", "sddl", "synchapi", "memoryapi"] }
