[package]
name = "iris-worker"
version = "0.1.0"
authors = ["Matthieu Buffet <matthieu@buffet.re>"]
edition = "2021"

[dependencies]
iris-ipc = { path = "../ipc" }
iris-policy = { path = "../policy" }

[target.'cfg(target_os="linux")'.dependencies]
libc = "0.2.94"
seccomp-sys = { git = "https://github.com/mtth-bfft/seccomp-sys", branch = "dev-mb" }

[target.'cfg(target_os="windows")'.dependencies]
winapi = { version = "0.3.9", features = ["processthreadsapi", "errhandlingapi", "sysinfoapi", "winbase", "winerror", "userenv", "sddl", "synchapi", "memoryapi"] }
